--- a/XiaomiMall/package.json
+++ b/XiaomiMall/package.json
@@ -1,7 +1,6 @@
 {
   "name": "xiaomi",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-scss": "^1.4.0"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
